--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.2",
+    "express-json-validator-middleware": "^2.2.1",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
     "firestore": "^1.1.6"
