--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,15 @@
 {
+  "scripts": {
+    "test": "mocha test"
+  },
   "dependencies": {
+    "chai": "^4.3.6",
     "express": "^4.17.2",
     "express-json-validator-middleware": "^2.2.1",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
-    "firestore": "^1.1.6"
+    "firestore": "^1.1.6",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0"
   }
 }
