--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
