--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "chai": "^4.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-json-validator-middleware": "^2.2.1",
     "firebase": "^9.6.6",
