--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
