--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,7 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   }
 }
