--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,14 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "chai": "^4.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "express-json-validator-middleware": "^2.2.1",
+    "firestore": "^1.1.6",
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
