--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "index.html",
+        "destination": "/index.html",
         "function": "app"
       }
     ]
@@ -23,5 +23,22 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint"
     ],
     "source": "functions"
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
