--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,11 @@
     "express-json-validator-middleware": "^2.2.1",
     "firestore": "^1.1.6",
     "mocha": "^9.2.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "firestoreClient" : "file:./",
+    "databaseSchemas": "file:./"
+
+    
   },
   "devDependencies": {
     "eslint": "^7.6.0",
