--- a/app/traste/public/manifest.json
+++ b/app/traste/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Traste",
+  "name": "Traste - Trace the Waste",
   "icons": [
     {
       "src": "favicon.ico",
