--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -66,7 +66,8 @@
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.3",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.5.1"
