--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,9 @@ test:
   dependencies:
     - npm
   script:
-    - npm run test
+    - cd functions
+    - npm run
+    - cd ..
 
 deploy-firestore:
   stage: deploy
