--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,17 +36,18 @@ eslint-backend:
     # Configure ESLint (will read your .eslintrc file)
     - cd functions
     - echo "Running eslint on functions/index.js"
-    - npx eslint -config index.js
+    - npx eslint --config index.js
     - echo "Eslint for index.js is done"
     
     - echo "Running eslint on functions/databaseSchemas.js"
-    - npx eslint -config databaseSchemas.js
+    - npx eslint --config databaseSchemas.js
     - echo "Eslint for databaseSchemas.js is done"
 
     - echo "Running eslint on functions/firestoreClient.js"
-    - npx eslint -config firestoreClient.js
+    - npx eslint --config firestoreClient.js
     - echo "Eslint for firestoreClient.js is done"
     - echo "Eslint check for backend is now complete"
+    - cd ..
 
 unit-test-backend:
   stage: test
@@ -99,3 +100,5 @@ deploy-hosting:
     - echo "Application is deployed"
   only:
     - main
+  changes:
+      - app/traste/**/*
