--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,7 @@ deploy-hosting:
     - firebase deploy --only hosting --token $FIREBASE_TOKEN
     - echo "Application is deployed"
   only:
-    - main
-  changes:
+    refs:
+      - main
+    changes:
       - app/traste/**/*
