--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,15 +36,15 @@ eslint-backend:
     # Configure ESLint (will read your .eslintrc file)
     - cd functions
     - echo "Running eslint on functions/index.js"
-    - npx eslint --config index.js
+    - npx eslint index.js
     - echo "Eslint for index.js is done"
     
     - echo "Running eslint on functions/databaseSchemas.js"
-    - npx eslint --config databaseSchemas.js
+    - npx eslint databaseSchemas.js
     - echo "Eslint for databaseSchemas.js is done"
 
     - echo "Running eslint on functions/firestoreClient.js"
-    - npx eslint --config firestoreClient.js
+    - npx eslint firestoreClient.js
     - echo "Eslint for firestoreClient.js is done"
     - echo "Eslint check for backend is now complete"
     - cd ..
