--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,10 @@
     git config --global user.email "PipelineUser@gmail.com"
     git add .
     git commit -m "fix: auto-update of eslint"
-    git push -o ci.skip "https://${GITLAB_USER_NAME}:${PROJECT_VARIABLE_WITH_ACCESS_TOKEN_VALUE}@${CI_REPOSITORY_URL#*@}"
+    git push -o ci.skip "https://project_access_token_name:$PROJECT_VARIABLE_WITH_ACCESS_TOKEN_VALUE@$CI_SERVER_HOST/$CI_PROJECT_PATH.git" HEAD:$CI_COMMIT_BRANCH
   else
     echo "no change, nothing to commit"
   fi
-
 
 image: node:latest
 
