--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,8 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
     "test": "mocha test",
-    "coverage": "nyc --reporter=html npm run test"
+    "coverage": "nyc --reporter=html npm run test",
+    "test-coverage": "npx nyc --reporter cobertura mocha"
   },
   "engines": {
     "node": "16"
