--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -63,6 +62,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
+    "eslint": "^8.12.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^0.6.5"
   }
