--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,7 @@ eslint-frontend:
   script:
     # Install ESLint in this docker container
     - npm install -g eslint
+    - npm install -g @babel/eslint-parser
     - cd app/traste
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
