--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-# Declare files that will always have CRLF line endings on checkout.
-.js text eol=crlf
-.json text eol=crlf
+# Declare files that will always have LF line endings on checkout.
+.js text eol=lf
+.json text eol=lf
