--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,3 @@
-.git-script: &git-script |
-  cd $CI_PROJECT_DIR
-  git status
-  lines=$(git status -s | wc -l)
-  if [ $lines -gt 0 ];then
-    echo "committing eslint fixes"
-    git config --global user.name "PipelineUser"
-    git config --global user.email "PipelineUser@gmail.com"
-    git add .
-    git commit -m "fix: auto-update of eslint"
-    git push -o ci.skip "https://project_access_token_name:$PROJECT_VARIABLE_WITH_ACCESS_TOKEN_VALUE@$CI_SERVER_HOST/$CI_PROJECT_PATH.git" HEAD:$CI_COMMIT_BRANCH
-  else
-    echo "no change, nothing to commit"
-  fi
-
 image: node:latest
 
 stages:     # List of stages for jobs, and their order of execution
@@ -55,9 +40,6 @@ npm-frontend:
     when: on_success
     paths:
       - app/traste/node_modules/
-  only:
-    changes:
-      - app/traste/**/*
 
 eslint-backend:
   stage: lint
@@ -70,9 +52,6 @@ eslint-backend:
     - echo "Starting eslint check for all files in the backend"
     - eslint .
     - echo "Done"
-  only:
-    changes:
-      - functions/**/*
 
 eslint-frontend:
   stage: lint
@@ -81,14 +60,11 @@ eslint-frontend:
   script:
     # Install ESLint in this docker container
     - npm install -g eslint
-    - npm install -g @babel/eslint-parser
+    - npm install -g eslint @babel/core @babel/eslint-parser
     - cd app/traste
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
     - echo "Done"
-  only:
-    changes:
-      - app/traste/**/*
 
 unit-test-backend: # Runs only tests when changes to backend is made
   stage: test
