--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ eslint-frontend:
   script:
     # Install ESLint in this docker container
     - npm install -g eslint
-    - npm install -g eslint @babel/core @babel/eslint-parser
+    - npm install -g eslint @babel/eslint-parser
     - cd app/traste
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
