--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,11 @@ npm-frontend:
     when: on_success
     paths:
       - app/traste/node_modules/
+  only:
+    refs:
+      - main
+    changes:
+      - app/traste/**/*
 
 eslint-backend:
   stage: lint
@@ -52,19 +57,28 @@ eslint-backend:
     - echo "Starting eslint check for all files in the backend"
     - eslint .
     - echo "Done"
+  only:
+    refs:
+      - main
+    changes:
+      - functions/**/*
 
 eslint-frontend:
   stage: lint
   dependencies: 
-    - npm-backend
+    - npm-frontend
   script:
     # Install ESLint in this docker container
     - npm install -g eslint
-    - npm install -g eslint @babel/eslint-parser
     - cd app/traste
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
     - echo "Done"
+  only:
+    refs:
+      - main
+    changes:
+      - app/traste/**/*
 
 unit-test-backend: # Runs only tests when changes to backend is made
   stage: test
