--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,11 @@ npm-frontend:
     when: on_success
     paths:
       - app/traste/node_modules/
+  only:
+    refs:
+      - main
+    changes:
+      - app/traste/**/*
 
 
 eslint-backend:
@@ -70,6 +75,11 @@ eslint-frontend:
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
     - echo "Done"
+  only:
+    refs:
+      - main
+    changes:
+      - app/traste/**/*
 
 unit-test-backend: # Runs only tests when changes to backend is made
   stage: test
