--- a/functions/package.json
+++ b/functions/package.json
@@ -17,19 +17,18 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
     "chai": "^4.3.6",
     "cors": "^2.8.5",
+    "databaseSchemas": "file:./",
     "express": "^4.17.2",
     "express-json-validator-middleware": "^2.2.1",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
     "firestore": "^1.1.6",
+    "firestoreClient": "file:./",
+    "googleapis": "^99.0.0",
     "mocha": "^9.2.1",
-    "nyc": "^15.1.0",
-    "firestoreClient" : "file:./",
-    "databaseSchemas": "file:./"
-
-    
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
