Removed LF/CRLF from eslint.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,9 @@
         "javascript"
     ],
     "files.eol": "\n",
+    "eslint.workingDirectories": [
+        {
+            "mode": "auto"
+        }
+    ],
 }
