--- a/firebase.json
+++ b/firebase.json
@@ -4,18 +4,11 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "app/traste/build",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html",
-        "function": "app"
-      }
     ]
   },
   "functions": {
@@ -39,6 +32,12 @@
     },
     "ui": {
       "enabled": true
+    },
+    "storage": {
+      "port": 9199
     }
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
