--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,6 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
@@ -23,7 +22,8 @@
     "databaseSchemas": "file:./",
     "express": "^4.17.2",
     "express-json-validator-middleware": "^2.2.1",
-    "firebase-admin": "^9.8.0",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.14.1",
     "firestore": "^1.1.6",
     "firestoreClient": "file:./",
