--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "busboy": "^1.5.0",
     "chai": "^4.3.6",
+    "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
     "databaseSchemas": "file:./",
     "express": "^4.17.2",
@@ -29,6 +31,7 @@
     "firestoreClient": "file:./",
     "googleapis": "^99.0.0",
     "mocha": "^9.2.1",
+    "multer": "^1.4.4",
     "nyc": "^15.1.0"
   },
   "devDependencies": {
