--- a/functions/package.json
+++ b/functions/package.json
@@ -32,7 +32,8 @@
     "googleapis": "^99.0.0",
     "mocha": "^9.2.1",
     "multer": "^1.4.4",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
