--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -17,6 +17,7 @@
     "babel-jest": "^27.5.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "firestoreClient": "file:../../../../functions/",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
@@ -35,8 +36,7 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4",
-    "firestoreClient": "file:../../../../functions/"
+    "workbox-streams": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,13 +63,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-react": "^7.16.7",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.5.1"
