--- a/functions/package.json
+++ b/functions/package.json
@@ -8,8 +8,8 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha test",
-    "coverage": "nyc --reporter=html npm run test",
+    "test-integration": "mocha test/integrationTest",
+    "coverage-integration": "nyc --reporter=html npm run test/integrationTest",
     "test-coverage": "npx nyc --reporter cobertura mocha"
   },
   "engines": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "busboy": "^1.5.0",
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
     "databaseSchemas": "file:./",
