--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
     "test-int": "mocha test/integrationTest",
-    "coverage-int": "nyc --reporter=html npm run test/integrationTest",
+    "coverage-int": "nyc --reporter=html npm run test-int",
     "test-coverage": "npx nyc --reporter cobertura mocha"
   },
   "engines": {
