--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
     "cors": "^2.8.5",
