--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ image: node:latest
 stages:     # List of stages for jobs, and their order of execution
   - npm
   - lint
+  - unit-test-backend
+  - unit-test-frontend
   - deploy
 
 npm-backend:
@@ -12,14 +14,6 @@ npm-backend:
     - echo "Running npm install for backend"
     - npm install
     - echo "npm install is complete"
-  cache:
-    paths:
-      - functions/node_modules/
-  artifacts:
-    expire_in: 1 days
-    when: on_success
-    paths:
-      - functions/node_modules/
 
 npm-frontend:
   stage: npm
@@ -28,14 +22,6 @@ npm-frontend:
     - echo "Running npm install for frontend"
     - npm install
     - echo "npm install is complete"
-  cache:
-    paths:
-      - app/traste/node_modules/
-  artifacts:
-    expire_in: 1 days
-    when: on_success
-    paths:
-      - app/traste/node_modules/
 
 eslint-backend:
   stage: lint
@@ -60,7 +46,43 @@ eslint-frontend:
     - echo "Starting eslint check for all files in the frontend"
     - eslint .
     - echo "Done"
-  
+
+unit-test-backend: 
+  stage: unit-test-backend
+  rules:
+    - when: never
+  dependencies:
+    - npm-backend
+  script:
+    - cd functions
+    - echo "Running unit tests for backend"
+    - npm run coverage-unit
+    - echo "Unit tests for backend are complete"
+  coverage: '/Code coverage: \d+\.\d+/'
+  artifacts:
+    expire_in: 1 year
+    when: on_success
+    paths:
+      - functions/coverage/
+
+unit-test-frontend:
+  stage: unit-test-frontend
+  rules:
+    - when: never
+  dependencies:
+    - npm-frontend
+  script:
+    - cd app/traste
+    - echo "Running unit tests for frontend"
+    - npm run test -- --coverage
+    - echo "Unit tests for frontend are complete"
+  coverage: '/Code coverage: \d+\.\d+/'
+  artifacts:
+    expire_in: 1 year
+    when: on_success
+    paths:
+      - app/traste/coverage/
+ 
 deploy-firestore:
   stage: deploy
   before_script:
