--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -17,6 +17,7 @@
     "babel-jest": "^27.5.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "firebase-functions": "^3.20.1",
     "firestoreClient": "file:../../../../functions/",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
