--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -16,6 +16,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "firestoreClient": "file:../../../../functions/",
