--- a/functions/package.json
+++ b/functions/package.json
@@ -33,6 +33,7 @@
     "firestore": "^1.1.6",
     "firestoreClient": "file:./",
     "googleapis": "^99.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^9.2.1",
     "multer": "^1.4.4",
     "nyc": "^15.1.0",
