--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -18,6 +18,7 @@
     "babel-jest": "^27.5.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "firebase-functions": "^3.20.1",
     "firestoreClient": "file:../../../../functions/",
