--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test-int": "mocha test/integrationTest",
+    "test-int": "mocha test/integrationTest --timeout 5000",
     "test-unit": "mocha test/unitTest",
     "coverage-int": "nyc --reporter=html npm run test-int",
     "coverage-unit": "nyc --reporter=html npm run test-unit",
