--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -2,6 +2,7 @@
   "name": "traste",
   "version": "0.1.0",
   "private": true,
+  "predeploy": "npm run build",
   "dependencies": {
     "@babel/preset-env": "^7.16.11",
     "@date-io/date-fns": "^1.3.13",
