--- a/app/traste/package.json
+++ b/app/traste/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.0",
     "babel-jest": "^27.5.1",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "firebase-functions": "^3.20.1",
     "firestoreClient": "file:../../../../functions/",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-jwt": "^1.1.5",
